// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`flow-sequence.yml - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
failing:
  [
    "object-does-not-fit-within-print-width", "------",
    "TEST", "comma IS added here"
  ]

expected:
  [
    "object-fits-within-print-width", "",
    "TEST", "comma NOT here"
  ]

---

does not suffice: >
  [
    "object-does-not-fit-within-print-width", "------",
    "TEST", "comma NOT here — but object's now a string due to '>'"
  ]

=====================================output=====================================
failing:
  [
    "object-does-not-fit-within-print-width",
    "------",
    "TEST",
    "comma IS added here",
  ]

expected: ["object-fits-within-print-width", "", "TEST", "comma NOT here"]

---
does not suffice: >
  [
    "object-does-not-fit-within-print-width", "------",
    "TEST", "comma NOT here — but object's now a string due to '>'"
  ]

================================================================================
`;

exports[`flow-sequence.yml - {"trailingComma":"es5"} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
trailingComma: "es5"
                                                                                | printWidth
=====================================input======================================
failing:
  [
    "object-does-not-fit-within-print-width", "------",
    "TEST", "comma IS added here"
  ]

expected:
  [
    "object-fits-within-print-width", "",
    "TEST", "comma NOT here"
  ]

---

does not suffice: >
  [
    "object-does-not-fit-within-print-width", "------",
    "TEST", "comma NOT here — but object's now a string due to '>'"
  ]

=====================================output=====================================
failing:
  [
    "object-does-not-fit-within-print-width",
    "------",
    "TEST",
    "comma IS added here",
  ]

expected: ["object-fits-within-print-width", "", "TEST", "comma NOT here"]

---
does not suffice: >
  [
    "object-does-not-fit-within-print-width", "------",
    "TEST", "comma NOT here — but object's now a string due to '>'"
  ]

================================================================================
`;

exports[`flow-sequence.yml - {"trailingComma":"none"} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
trailingComma: "none"
                                                                                | printWidth
=====================================input======================================
failing:
  [
    "object-does-not-fit-within-print-width", "------",
    "TEST", "comma IS added here"
  ]

expected:
  [
    "object-fits-within-print-width", "",
    "TEST", "comma NOT here"
  ]

---

does not suffice: >
  [
    "object-does-not-fit-within-print-width", "------",
    "TEST", "comma NOT here — but object's now a string due to '>'"
  ]

=====================================output=====================================
failing:
  [
    "object-does-not-fit-within-print-width",
    "------",
    "TEST",
    "comma IS added here"
  ]

expected: ["object-fits-within-print-width", "", "TEST", "comma NOT here"]

---
does not suffice: >
  [
    "object-does-not-fit-within-print-width", "------",
    "TEST", "comma NOT here — but object's now a string due to '>'"
  ]

================================================================================
`;

exports[`flow-sequence.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
failing:
  [
    "object-does-not-fit-within-print-width", "------",
    "TEST", "comma IS added here"
  ]

expected:
  [
    "object-fits-within-print-width", "",
    "TEST", "comma NOT here"
  ]

---

does not suffice: >
  [
    "object-does-not-fit-within-print-width", "------",
    "TEST", "comma NOT here — but object's now a string due to '>'"
  ]

=====================================output=====================================
failing:
  [
    "object-does-not-fit-within-print-width",
    "------",
    "TEST",
    "comma IS added here",
  ]

expected: ["object-fits-within-print-width", "", "TEST", "comma NOT here"]

---
does not suffice: >
  [
    "object-does-not-fit-within-print-width", "------",
    "TEST", "comma NOT here — but object's now a string due to '>'"
  ]

================================================================================
`;
